pkg/cmd/kurel/testdata/cilium-networkpolicy-minimal/expected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
        launcher.gokure.dev/component: api
    spec:
      containers:
      - image: ghcr.io/example/api:v1.0.0
        name: api
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: api
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
  type: ClusterIP
---
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api
  namespace: default
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    launcher.gokure.dev/component: api
  name: api-allow-ingress
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: api
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
